--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -25,9 +25,9 @@
 					<p:column>
 						<p:menuButton icon="pi pi-user"
 							style="float:right;padding: 10px 5px;"
-							value="#{UseAdmBean.administrador.nome}">
+							value="#{UsePessoaBean.administrador.nome}">
 							<p:menuitem value="Sair" icon="pi pi-sign-out"
-								action="#{UseAdmBean.logout()}" />
+								action="#{UsePessoaBean.logout()}" />
 						</p:menuButton>
 					</p:column>
 				</p:panelGrid>
