--- a/src/main/webapp/WEB-INF/template/menuVenda.xhtml
+++ b/src/main/webapp/WEB-INF/template/menuVenda.xhtml
@@ -35,9 +35,9 @@
 				<p:column>
 					<p:menuButton icon="pi pi-user"
 						style="float:right;padding: 20px 10px;"
-						value="#{UseClienteBean.cliente.nome}">
+						value="#{UsePessoaBean.cliente.nome}">
 						<p:menuitem value="Finalizar sessão" icon="pi pi-sign-out"
-							action="#{UseClienteBean.logout()}" />
+							action="#{UsePessoaBean.logoutClienteVendedor()}" />
 					</p:menuButton>
 				</p:column>
 			</p:panelGrid>
