--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -24,23 +24,23 @@ html, body {
 	</h:head>
 	<h:body>
 		<div id="cabecalho">
-			<h:panelGroup rendered="#{UseAdmBean.logado == true}">
+			<h:panelGroup rendered="#{UsePessoaBean.logadoAdm == true}">
 				<ui:include src="/WEB-INF/template/menuAdministrador.xhtml" />
 			</h:panelGroup>
 			<h:panelGroup
-				rendered="#{UseClienteBean.logado == true and UseVendedorBean.logado == true}">
+				rendered="#{UsePessoaBean.logadoCliente == true and UsePessoaBean.logadoVendedor == true}">
 				<ui:include src="/WEB-INF/template/menuVenda.xhtml" />
 			</h:panelGroup>
 			<h:panelGroup
-				rendered="#{UseClienteBean.logado == true and UseVendedorBean.logado == false}">
+				rendered="#{UsePessoaBean.logadoCliente == true and UsePessoaBean.logadoVendedor == false}">
 				<ui:include src="/WEB-INF/template/menuCliente.xhtml" />
 			</h:panelGroup>
 			<h:panelGroup
-				rendered="#{UseVendedorBean.logado == true and UseClienteBean.logado == false}">
+				rendered="#{UsePessoaBean.logadoVendedor == true and UsePessoaBean.logadoCliente == false}">
 				<ui:include src="/WEB-INF/template/menuVendedor.xhtml" />
 			</h:panelGroup>
 			<h:panelGroup
-				rendered="#{UseAdmBean.logado == false and UseClienteBean.logado == false and UseVendedorBean.logado == false}">
+				rendered="#{UsePessoaBean.logadoAdm == false and UsePessoaBean.logadoCliente == false and UsePessoaBean.logadoVendedor == false}">
 				<ui:include src="/WEB-INF/template/menuSite.xhtml" />
 			</h:panelGroup>
 		</div>
