ADD(home) radar

--- a/src/main/webapp/WEB-INF/template/footerPagina.xhtml
+++ b/src/main/webapp/WEB-INF/template/footerPagina.xhtml
@@ -10,16 +10,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<h:outputStylesheet library="css" name="footer.css" />
 </h:head>
-
-
-<footer>
-	<div class="blog-footer">
-		<p>Compre Seu Jogo | Endereço: Rua Juvenal Tererê, 50, Centro,
-			Curitiba-PR, 83701-500</p>
-		<p>Copyright 2018 © Compre Seu Jogo</p>
-		<p>Contato | Suporte: contato@compreseujogo.com.br</p>
-	</div>
-
-</footer>
-
+<h:body>
+	<footer>
+		<div class="blog-footer" style="margin-top: 0px;">
+			<p>Compre Seu Jogo | Endereço: Rua Juvenal Tererê, 50, Centro,
+				Curitiba-PR, 83701-500</p>
+			<p>Copyright 2018 © Compre Seu Jogo</p>
+			<p>Contato | Suporte: contato@compreseujogo.com.br</p>
+		</div>
+	</footer>
+</h:body>
 </html>
