--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -44,11 +44,11 @@ html, body {
 				<ui:include src="/WEB-INF/template/MenuSite.xhtml" />
 			</h:panelGroup>
 		</div>
-		<div id="conteudo">
+		<div id="conteudo" style="margin-bottom: 0px;">
 			<ui:insert name="conteudo">
 			</ui:insert>
 		</div>
-		<div id="footer">
+		<div id="footer" style="margin-top: 0px;">
 			<ui:include src="/WEB-INF/template/footerPagina.xhtml" />
 		</div>
 	</h:body>
