--- a/src/main/webapp/WEB-INF/template/MenuSite.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuSite.xhtml
@@ -26,7 +26,7 @@
 					</p:column>
 					<p:column>
 						<div style="padding-top: 20px">
-							<p:inputText size="35" style="margin:1px 10px 1px 1px;"
+							<p:inputText size="32" style="margin:1px 10px 1px 1px;"
 								value="#{produtoBean.filtro}" placeholder="Procurar" />
 							<p:commandButton action="#{produtoBean.telaPesquisa()}"
 								icon="pi pi-search">
@@ -35,6 +35,8 @@
 						</div>
 					</p:column>
 					<p:column>
+						<p:commandLink style="float:right;padding: 20px 25px;"
+							action="cadastroClienteSite.xhtml?faces-redirect=true" value="Criar minha conta" />
 						<p:commandLink style="float:right;padding: 20px 25px;"
 							action="login.xhtml?faces-redirect=true" value="Login" />
 					</p:column>
