--- a/src/main/webapp/WEB-INF/template/menuVendedor.xhtml
+++ b/src/main/webapp/WEB-INF/template/menuVendedor.xhtml
@@ -32,10 +32,6 @@
 					</p:column>
 				</p:panelGrid>
 				<p:menubar>
-					<p:submenu label="Perfil" icon="pi pi-pencil">
-						<p:menuitem value="Editar" url="#" />
-						<p:menuitem value="Redefinir senha" url="#" />
-					</p:submenu>
 					<p:submenu label="Gerência" icon="pi pi-cog">
 						<p:menuitem value="Categoria"
 							url="listaCategoria.xhtml?faces-redirect=true" />
@@ -46,7 +42,7 @@
 						<p:menuitem value="Plataforma"
 							url="listaPlataforma.xhtml?faces-redirect=true" />
 						<p:separator />
-						<p:menuitem value="Produto" action="#{produtoBean.crud()}" />
+						<p:menuitem value="Produto" immediate="true" action="#{produtoBean.crud()}" />
 						<p:separator />
 					</p:submenu>
 					<p:submenu label="Venda" icon="pi pi-users">
@@ -59,6 +55,10 @@
 						<p:separator />
 						<p:menuitem value="Fornecedor"
 							url="listaFornecedor.xhtml?faces-redirect=true" />
+					</p:submenu>
+					<p:submenu label="Vendas" icon="pi pi-shopping-cart">
+						<p:menuitem value="Todas" />
+						<p:separator />
 					</p:submenu>
 				</p:menubar>
 				<p:dialog header="Nova venda" widgetVar="dlg" resizable="false">
