--- a/src/main/webapp/WEB-INF/template/template.xhtml
+++ b/src/main/webapp/WEB-INF/template/template.xhtml
@@ -44,7 +44,8 @@ html, body {
 				<ui:include src="/WEB-INF/template/MenuSite.xhtml" />
 			</h:panelGroup>
 		</div>
-		<div id="conteudo" style="margin-bottom: 0px;">
+		<div id="conteudo"
+			style="min-height: 500px; margin-bottom: 0px; background: #696969;">
 			<ui:insert name="conteudo">
 			</ui:insert>
 		</div>
