--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -19,8 +19,12 @@
 				<p:growl id="messages" />
 				<p:panelGrid columns="2" layout="grid">
 					<p:column>
-						<p:graphicImage style="width: 50px;height:50px;" library="imagem"
-							name="logoB.png" />
+						<h:commandLink action="homeAdm.xhtml?faces-redirect=true">
+							<p:graphicImage style="width: 75px;height:75px;" library="imagem"
+								name="logoTe.png" />
+							<p:outputLabel style="padding: 20px 25px;font-size:1.6em;"
+								value="COMPRE SEU JOGO" />
+						</h:commandLink>
 					</p:column>
 					<p:column>
 						<p:menuButton icon="pi pi-user"
@@ -64,8 +68,7 @@
 							url="listaFornecedor.xhtml?faces-redirect=true" />
 					</p:submenu>
 					<p:submenu label="Vendas" icon="pi pi-shopping-cart">
-						<p:menuitem value="Todas"
-							 />
+						<p:menuitem value="Todas" />
 						<p:separator />
 					</p:submenu>
 				</p:menubar>
