--- a/src/main/webapp/WEB-INF/template/MenuSite.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuSite.xhtml
@@ -21,7 +21,9 @@
 					<p:column>
 						<h:commandLink action="index.xhtml?faces-redirect=true">
 							<p:graphicImage style="width: 75px;height:75px;" library="imagem"
-								name="logoB.png" />
+								name="logoTe.png" />
+							<p:outputLabel style="padding: 20px 25px;font-size:1.6em;"
+								value="COMPRE SEU JOGO" />
 						</h:commandLink>
 					</p:column>
 					<p:column>
@@ -36,36 +38,36 @@
 					</p:column>
 					<p:column>
 						<p:commandLink style="float:right;padding: 20px 25px;"
-							action="cadastroClienteSite.xhtml?faces-redirect=true" value="Criar minha conta" />
+							action="cadastroClienteSite.xhtml?faces-redirect=true"
+							value="Criar minha conta" />
 						<p:commandLink style="float:right;padding: 20px 25px;"
 							action="login.xhtml?faces-redirect=true" value="Login" />
 					</p:column>
 				</p:panelGrid>
 				<p:menubar>
 					<p:submenu label="PLAYSTATION">
-						<p:menuitem rendered="" value="Categoria"
-							url="cadastroCategoria.xhtml?faces-redirect=true" />
+						<p:menuitem rendered="" value="Categoria" />
 						<p:separator />
-						<p:menuitem value="PLAYSTATION 5"
-							url="cadastroMarca.xhtml?faces-redirect=true" />
+						<p:menuitem value="PLAYSTATION 5" immediate="true"
+							action="#{produtoBean.telaPesquisaPlay()}" />
 						<p:separator />
-						<p:menuitem value="PLAYSTATION 4"
-							url="cadastroPlataforma.xhtml?faces-redirect=true" />
+						<p:menuitem value="PLAYSTATION 4" immediate="true"
+							action="#{produtoBean.telaPesquisaPlay()}" />
 						<p:separator />
-						<p:menuitem value="PLAYSTATION 3"
-							url="cadastroProduto.xhtml?faces-redirect=true" />
+						<p:menuitem value="PLAYSTATION 3" immediate="true"
+							action="#{produtoBean.telaPesquisaPlay()}" />
 						<p:separator />
 					</p:submenu>
-
 					<p:submenu label="XBOX">
-						<p:menuitem value="XBOX SERIES X e S" url="#" />
-						<p:menuitem value="XBOX ONE" url="#" />
-						<p:menuitem value="XBOX 360" url="#" />
+						<p:menuitem value="XBOX ONE" immediate="true"
+							action="#{produtoBean.telaPesquisaXBox()}" />
+						<p:separator />
+						<p:menuitem value="XBOX 360" immediate="true"
+							action="#{produtoBean.telaPesquisaXBox()}" />
 					</p:submenu>
-
 					<p:submenu label="NINTENDO">
-						<p:menuitem value="JOGOS" url="#" />
-						<p:menuitem value="CONSOLES" url="#" />
+						<p:menuitem value="JOGOS" immediate="true"
+							action="#{produtoBean.telaPesquisaNintendo()}" />
 					</p:submenu>
 				</p:menubar>
 			</h:form>
