ultimo commit porra

--- a/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
+++ b/src/main/webapp/WEB-INF/template/MenuAdministrador.xhtml
@@ -68,7 +68,8 @@
 							url="listaFornecedor.xhtml?faces-redirect=true" />
 					</p:submenu>
 					<p:submenu label="Vendas" icon="pi pi-shopping-cart">
-						<p:menuitem value="Todas" />
+						<p:menuitem value="Todas"
+							url="comprasGeral.xhtml?faces-redirect=true" />
 						<p:separator />
 					</p:submenu>
 				</p:menubar>
