--- a/src/main/webapp/WEB-INF/template/menuVenda.xhtml
+++ b/src/main/webapp/WEB-INF/template/menuVenda.xhtml
@@ -51,18 +51,18 @@
 						action="#{produtoBean.telaPesquisaPlay()}" />
 					<p:separator />
 					<p:menuitem value="PLAYSTATION 4" immediate="true"
-						action="#{produtoBean.telaPesquisaPlay()}" />
+						action="#{produtoBean.telaPesquisaPlay4()}" />
 					<p:separator />
 					<p:menuitem value="PLAYSTATION 3" immediate="true"
-						action="#{produtoBean.telaPesquisaPlay()}" />
+						action="#{produtoBean.telaPesquisaPlay3()}" />
 					<p:separator />
 				</p:submenu>
 				<p:submenu label="XBOX">
 					<p:menuitem value="XBOX ONE" immediate="true"
-						action="#{produtoBean.telaPesquisaXBox()}" />
+						action="#{produtoBean.telaPesquisaXBoxOne()}" />
 					<p:separator />
 					<p:menuitem value="XBOX 360" immediate="true"
-						action="#{produtoBean.telaPesquisaXBox()}" />
+						action="#{produtoBean.telaPesquisaXBox360()}" />
 				</p:submenu>
 				<p:submenu label="NINTENDO">
 					<p:menuitem value="JOGOS" immediate="true"
