--- a/src/main/webapp/WEB-INF/template/menuVendedor.xhtml
+++ b/src/main/webapp/WEB-INF/template/menuVendedor.xhtml
@@ -60,7 +60,9 @@
 					<p:submenu label="Venda" icon="pi pi-shopping-cart">
 						<p:menuitem onclick="PF('dlg').show();" value="Nova" />
 						<p:separator />
-						<p:menuitem immediate="true" value="Todas" />
+						<p:menuitem immediate="true" 
+									value="Todas" 
+									url="comprasGeral.xhtml?faces-redirect=true" />/>
 						<p:separator />
 					</p:submenu>
 				</p:menubar>
